# django-platform

./: .editorconfig  .gitignore  .prettierrc.yaml  db.sqlite3  pyproject.toml
apps/catalog/: models.py
apps/catalog/migrations/: 0001_initial.py
apps/catalog/templates/: base_generic.html  index.html
apps/dashboard/: admin.py  models.py  views.py
apps/dashboard/migrations/: 0001_initial.py
apps/dashboard/templates/: index.html
project/: settings.py  urls.py
templates/admin/: base_site.html
utils/_tailwind/: apps.py
utils/_tailwind/static_src/: tailwind.config.js
