[tool.poetry]
name = "django-platform"
version = "0.1.0"
description = ""
authors = ["Andrii Kliuiko <32270840+andrUIko@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
django = "^5.0.6"
python = ">=3.12,<3.13"
django-tailwind = {extras = ["reload"], version = "^3.8.0"}

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.2"
django-extensions = "^3.2.3"
django-browser-reload = "^1.13.0"
werkzeug = "^3.0.3"
pyinstaller = "^6.9.0"
build = "^1.2.1"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
